[gd_scene load_steps=4 format=2]

[ext_resource path="res://bullet.gd" type="Script" id=1]
[ext_resource path="res://assets/turret_color.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 6.67421

[node name="bullet" type="RigidBody2D" groups=[
"bullet",
]]

input_pickable = false
collision_layer = 2
collision_mask = 2
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = -1.0
angular_velocity = 0.0
angular_damp = -1.0
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform" ]

[node name="bullet_area_shape" type="CollisionShape2D" parent="." index="0"]

shape = SubResource( 1 )

[node name="bullet_color" type="Sprite" parent="." index="1"]

scale = Vector2( 0.285446, 0.285446 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="bullet_life_time" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_bullet_body_entered"]

[connection signal="body_shape_entered" from="." to="." method="_on_bullet_body_shape_entered"]

[connection signal="timeout" from="bullet_life_time" to="." method="_on_Timer_timeout"]


